# cc

./: .gitignore  Cargo.toml  README.md
crates/c2-agent/: Cargo.toml
crates/c2-agent/src/: agent.rs  lib.rs  processor.rs  system_prompt.txt
crates/c2-cli/: Cargo.toml
crates/c2-cli/src/: main.rs
crates/c2-config/: Cargo.toml
crates/c2-config/src/: lib.rs
crates/c2-core/: Cargo.toml
crates/c2-core/src/: bus.rs  lib.rs  message.rs  session.rs
crates/c2-lsp/: Cargo.toml
crates/c2-lsp/src/: lib.rs
crates/c2-mcp/: Cargo.toml
crates/c2-mcp/src/: lib.rs
crates/c2-permissions/: Cargo.toml
crates/c2-provider/: Cargo.toml
crates/c2-provider/src/: openai.rs  registry.rs
crates/c2-pty/: Cargo.toml
crates/c2-pty/src/: lib.rs
crates/c2-server/: Cargo.toml
crates/c2-server/src/: lib.rs  state.rs
crates/c2-server/src/routes/: mod.rs  session.rs
crates/c2-skills/: Cargo.toml
crates/c2-skills/src/: hivemind.rs  lib.rs  vexa.rs
crates/c2-snapshot/: Cargo.toml
crates/c2-snapshot/src/: lib.rs
crates/c2-storage/: Cargo.toml
crates/c2-storage/migrations/: 0001_initial.sql
crates/c2-storage/src/: lib.rs
crates/c2-tools/: Cargo.toml
crates/c2-tools/src/: edit.rs  glob.rs  lib.rs  read.rs  registry.rs  subagent.rs  todo.rs  tool.rs  web_fetch.rs  web_search.rs  write.rs
crates/c2-tui/: Cargo.toml
crates/c2-tui/src/: app.rs  lib.rs  mcp_manager.rs  mcp_marketplace.rs  models_fetcher.rs  theme.rs  ui.rs
crates/c2-tui/src/ui/: dialog.rs  header.rs  input.rs  messages.rs  mod.rs  panel.rs  sidebar.rs  status_bar.rs
crates/cc-agent/: Cargo.toml
crates/cc-agent/src/: agent.rs  lib.rs  processor.rs  system_prompt.txt
crates/cc-cli/: Cargo.toml
crates/cc-cli/src/: main.rs
crates/cc-config/: Cargo.toml
crates/cc-config/src/: lib.rs
crates/cc-core/: Cargo.toml
crates/cc-core/src/: bus.rs  lib.rs  message.rs  session.rs
crates/cc-lsp/: Cargo.toml
crates/cc-lsp/src/: lib.rs
crates/cc-mcp/: Cargo.toml
crates/cc-mcp/src/: lib.rs
crates/cc-permissions/: Cargo.toml
crates/cc-permissions/src/: lib.rs
crates/cc-provider/: Cargo.toml
crates/cc-provider/src/: anthropic.rs  lib.rs  openai.rs  registry.rs
crates/cc-pty/: Cargo.toml
crates/cc-pty/src/: lib.rs
crates/cc-server/: Cargo.toml
crates/cc-server/src/: lib.rs  state.rs
crates/cc-server/src/routes/: events.rs  provider.rs  session.rs
crates/cc-skills/: Cargo.toml
crates/cc-skills/src/: lib.rs
crates/cc-snapshot/: Cargo.toml
crates/cc-snapshot/src/: lib.rs
crates/cc-storage/: Cargo.toml
crates/cc-storage/migrations/: 0001_initial.sql
crates/cc-storage/src/: lib.rs
crates/cc-tools/: Cargo.toml
crates/cc-tools/src/: bash.rs  grep.rs  ls.rs  registry.rs  todo.rs  tool.rs  web_fetch.rs  write.rs
crates/cc-tui/: Cargo.toml
crates/cc-tui/src/: lib.rs
