[workspace]
resolver = "2"
members = [
    "crates/c2-cli",
    "crates/c2-core",
    "crates/c2-agent",
    "crates/c2-tools",
    "crates/c2-lsp",
    "crates/c2-mcp",
    "crates/c2-provider",
    "crates/c2-server",
    "crates/c2-tui",
    "crates/c2-storage",
    "crates/c2-config",
    "crates/c2-pty",
    "crates/c2-snapshot",
    "crates/c2-permissions",
    "crates/c2-skills",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["companion-lab"]
repository = "https://github.com/companion-lab/c2"

[workspace.dependencies]
# async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# http
axum           = { version = "0.8", features = ["ws", "macros"] }
tower          = { version = "0.5" }
tower-http     = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest        = { version = "0.12", features = ["json", "stream"], default-features = false }
hyper          = { version = "1" }
eventsource-stream = { version = "0.2" }

# serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1" }
toml         = { version = "0.8" }

# cli
clap         = { version = "4", features = ["derive", "env"] }

# storage
sqlx         = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "json"] }

# error handling
anyhow       = "1"
thiserror    = "2"

# logging / tracing
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }

# tui
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["event-stream"] }

# ids
ulid         = "1"
uuid         = { version = "1", features = ["v4", "serde"] }

# utils
futures      = "0.3"
async-trait  = "0.1"
async-stream = "0.3"
bytes        = "1"
chrono       = { version = "0.4", features = ["serde"] }
dirs         = "5"
globset      = "0.4"
notify       = { version = "7", features = ["serde"] }
regex        = "1"
semver       = { version = "1", features = ["serde"] }
walkdir      = "2"
which        = "7"
tempfile     = "3"
rand         = "0.8"

# workspace crates
c2-core        = { path = "crates/c2-core" }
c2-config      = { path = "crates/c2-config" }
c2-storage     = { path = "crates/c2-storage" }
c2-provider    = { path = "crates/c2-provider" }
c2-agent       = { path = "crates/c2-agent" }
c2-tools       = { path = "crates/c2-tools" }
c2-lsp         = { path = "crates/c2-lsp" }
c2-mcp         = { path = "crates/c2-mcp" }
c2-server      = { path = "crates/c2-server" }
c2-tui         = { path = "crates/c2-tui" }
c2-pty         = { path = "crates/c2-pty" }
c2-snapshot    = { path = "crates/c2-snapshot" }
c2-permissions = { path = "crates/c2-permissions" }
c2-skills      = { path = "crates/c2-skills" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0
debug     = true
