[package]
name = "c2"
description = "Companion CLI — an agentic coding assistant"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "c2"
path = "src/main.rs"

[dependencies]
c2-core        = { workspace = true }
c2-config      = { workspace = true }
c2-storage     = { workspace = true }
c2-provider    = { workspace = true }
c2-agent       = { workspace = true }
c2-tools       = { workspace = true }
c2-server      = { workspace = true }
c2-tui         = { workspace = true }
c2-mcp         = { workspace = true }
c2-permissions = { workspace = true }
c2-skills      = { workspace = true }
clap           = { workspace = true }
clap_complete  = "4"
tokio          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json     = { workspace = true }
dirs           = { workspace = true }
chrono         = { workspace = true }
