[package]
name = "c2-config"
description = "Layered configuration loading and watching"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
notify         = { workspace = true }
dirs           = { workspace = true }
tokio          = { workspace = true }
