[package]
name = "c2-core"
description = "Core session, message, and event types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c2-storage     = { workspace = true }
c2-config      = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
ulid           = { workspace = true }
chrono         = { workspace = true }
async-trait    = { workspace = true }
futures        = { workspace = true }
bytes          = { workspace = true }
