[package]
name = "c2-lsp"
description = "Language Server Protocol client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c2-config      = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
async-trait    = { workspace = true }
futures        = { workspace = true }
bytes          = { workspace = true }
which          = { workspace = true }
lsp-types      = "0.97"
