[package]
name = "c2-mcp"
description = "Model Context Protocol client (stdio, SSE, HTTP transports)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c2-config      = { workspace = true }
c2-core        = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
async-trait    = { workspace = true }
futures        = { workspace = true }
bytes          = { workspace = true }
reqwest        = { workspace = true, features = ["rustls-tls"] }
eventsource-stream = { workspace = true }
