[package]
name = "c2-server"
description = "HTTP/SSE/WebSocket daemon (axum)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c2-core        = { workspace = true }
c2-config      = { workspace = true }
c2-storage     = { workspace = true }
c2-agent       = { workspace = true }
c2-provider    = { workspace = true }
c2-mcp         = { workspace = true }
c2-pty         = { workspace = true }
c2-permissions = { workspace = true }
axum           = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
hyper          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
futures        = { workspace = true }
bytes          = { workspace = true }
