[package]
name = "c2-storage"
description = "SQLite persistence layer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
ulid           = { workspace = true }
chrono         = { workspace = true }
tokio          = { workspace = true }
dirs           = { workspace = true }

[build-dependencies]
