[package]
name = "c2-tui"
description = "Terminal UI (ratatui)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c2-core        = { workspace = true }
c2-config      = { workspace = true }
c2-server      = { workspace = true }
ratatui        = { workspace = true }
crossterm      = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
futures        = { workspace = true }
reqwest        = { workspace = true, features = ["rustls-tls"] }
eventsource-stream = { workspace = true }
