[package]
name = "c2-tui"
description = "Terminal UI (ratatui)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c2-core        = { workspace = true }
c2-config      = { workspace = true }
c2-storage     = { workspace = true }
c2-provider    = { workspace = true }
c2-agent       = { workspace = true }
ratatui        = { workspace = true }
crossterm      = { workspace = true }
tokio          = { workspace = true }
textwrap       = "0.16"
anyhow         = { workspace = true }
