[package]
name = "c2-tui"
description = "Terminal UI (opentui_rust)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c2-core        = { workspace = true }
c2-config      = { workspace = true }
c2-storage     = { workspace = true }
c2-provider    = { workspace = true }
c2-agent       = { workspace = true }
opentui_rust   = "0.2"
crossterm      = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
