[package]
name = "cc"
description = "Companion CLI — an agentic coding assistant"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
cc-core        = { workspace = true }
cc-config      = { workspace = true }
cc-storage     = { workspace = true }
cc-provider    = { workspace = true }
cc-agent       = { workspace = true }
cc-tools       = { workspace = true }
cc-server      = { workspace = true }
cc-tui         = { workspace = true }
cc-mcp         = { workspace = true }
cc-permissions = { workspace = true }
cc-skills      = { workspace = true }
clap           = { workspace = true }
clap_complete  = "4"
tokio          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json     = { workspace = true }
dirs           = { workspace = true }
chrono         = { workspace = true }
