[package]
name = "cc-permissions"
description = "Permission gate for tool execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cc-config      = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
async-trait    = { workspace = true }
regex          = { workspace = true }
