[package]
name = "cc-server"
description = "HTTP/SSE/WebSocket daemon (axum)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cc-core        = { workspace = true }
cc-config      = { workspace = true }
cc-storage     = { workspace = true }
cc-agent       = { workspace = true }
cc-provider    = { workspace = true }
cc-mcp         = { workspace = true }
cc-pty         = { workspace = true }
cc-permissions = { workspace = true }
axum           = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
hyper          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
futures        = { workspace = true }
bytes          = { workspace = true }
